dataset1235/2025-2/2947369575/users/3893556986/executions/1003782500_1462915504.log
== SUBMISSION (2025-09-01 22:28:01)
-- CODE: 
from math import *

# faça seu código aqui!
import math
lado = float(input())
apotema = lado/(2*math.tan(math.pi/5))
area = 5/2*apotema

print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
15.48
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
10.32
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
18.93
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
13.76
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
6.88
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
17.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:28:48)
-- CODE: 
from math import *

# faça seu código aqui!
import math
lado = float(input())
apotema = lado/(2*math.tan(math.pi/5))
area = 5/2*lado*apotema

print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:28:27)
-- CODE: 
from math import *

# faça seu código aqui!
import math
lado = float(input())
apotema = lado/(2*math.tan(math.pi/5))
area = 5/2*lado apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 7
    area = 5/2*lado apotema
                    ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 7
    area = 5/2*lado apotema
                    ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 7
    area = 5/2*lado apotema
                    ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 7
    area = 5/2*lado apotema
                    ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 7
    area = 5/2*lado apotema
                    ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 7
    area = 5/2*lado apotema
                    ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
